--- a/frontend/src/Components/ProductDisplay/ProductDisplay.css
+++ b/frontend/src/Components/ProductDisplay/ProductDisplay.css
@@ -23,3 +23,40 @@
     height: 700px;
 }
 
+.productdisplay-right{
+    display: flex;
+    flex-direction: column;
+    margin: 0px 70px;
+
+}
+
+.productdisplay-right-stars{
+    display: flex;
+}
+
+.productdisplay-right h1{
+    color: #3d3d3d;
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.productdisplay-right-price-old{
+    color: #818188;
+    text-decoration: line-through;
+}
+
+.productdisplay-right-price-new{
+    color: #ff4141;
+}
+
+.productdisplay-right-size h1 {
+    margin-top:  55px;
+    color: #656565;
+    font-weight: 600;
+}
+
+.productdisplay-right-sizes{
+    display: flex;
+    margin: 30px;
+    gap: 20px;
+}
