--- a/frontend/src/Components/Item/item.css
+++ b/frontend/src/Components/Item/item.css
@@ -1,5 +1,9 @@
 .item{
-    width: 350px;
+    width: 280px;
+}
+
+.item img {
+    width: 280px;
 }
 
 .item p{
@@ -25,4 +29,15 @@
 .item:hover{
     transform: scale(1.05);
     transition: 0.6s;
+}
+
+@media(max-width: 1280px){
+    .item{
+        width: 220px;
+        font-size: 14px;
+    }
+
+    .item img{
+        width: 220px;
+    }
 }
