--- a/frontend/src/Components/DescriptionBox/DescriptionBox.css
+++ b/frontend/src/Components/DescriptionBox/DescriptionBox.css
@@ -35,3 +35,19 @@
     /* Styles for the paragraph elements */
     margin-bottom: 10px;
   }
+
+  @media(max-width: 1280px){
+    .descriptionbox {
+      margin: 60px;
+    }
+  }
+  @media(max-width: 800px){
+    .descriptionbox {
+      margin: 60px 20px;
+    }
+
+    .descriptionbox-describtion{
+      font-size: 14px;
+    }
+
+  }
