--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -4,7 +4,6 @@
     justify-content: center;
     align-items: center;
     gap: 50px;
-
 }
 
 .footer-logo{
@@ -62,4 +61,44 @@
     border-radius: 10px;
     height: 3px;
     background: #c7c7c7;
+}
+
+@media(max-width: 800px){
+    .footer{
+        gap: 20px;
+    }
+
+    .footer-logo{
+        gap: 10px;
+        align-items: end;
+    }
+
+    .footer-logo img{
+        width: 50px;
+    }
+
+    .footer-logo p{
+        font-size: 30px;
+    }
+
+    .footer-links{
+        font-size: 14px;
+        gap: 40px;
+    }
+
+    .footer-social-icon img{
+        width: 22px;
+    }
+
+    .footer-copyright{
+        font-size: 13px;
+    }
+
+    
+}
+
+@media(max-width: 500px){
+    .footer-links{
+            gap: 20px;
+        }
 }
