--- a/frontend/src/Components/Item/item.css
+++ b/frontend/src/Components/Item/item.css
@@ -40,4 +40,49 @@
     .item img{
         width: 220px;
     }
+
+    .item-price-old{
+        font-size: 14px;
+    }
+}
+
+@media(max-width: 1024px){
+    .item{
+        width: 170px;
+        font-size: 13px;
+
+    }
+
+    .item img{
+        width: 170px;
+    }
+
+    .item-price-old{
+        font-size: 13px;
+    }
+}
+@media(max-width: 800px){
+    .item{
+        width: 120px;
+        font-size: 12px;
+
+    }
+
+    .item img{
+        width: 120px;
+    }
+
+    .item-price-old{
+        font-size: 12px;
+    }
+}
+
+@media(max-width: 500px){
+    .item{
+        width: 160px;
+    }
+
+    .item img{
+        width: 160px;
+    }
 }
