--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -148,7 +148,7 @@
 
     .nav-dropdown{
         display: block;
-        height: 40px;
+        height: 35px;
         rotate: -90deg;
         transition: 0.5s;
     }
@@ -177,7 +177,9 @@
         width: 8px 0px;
         gap: 0;
     }
-
+    .nav-dropdown{
+        height: 30px;
+    }
     .nav-logo{
         transform: scale(0.8);
     }
