--- a/frontend/src/Components/NewCollections/NewCollections.css
+++ b/frontend/src/Components/NewCollections/NewCollections.css
@@ -4,6 +4,7 @@
     align-items: center;
     gap: 20px;
     margin-bottom: 100px;
+    margin-top: 100px;
 }
 
 .newcollections h1{
@@ -24,4 +25,76 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-top:  50px;
     gap: 30px;
+}
+
+
+@media(max-width: 1280px) {
+    .newcollections{
+        height: 70vh;
+    }
+
+    .newcollections h1 {
+        font-size: 40px;
+    }
+
+    .newcollections hr {
+        width: 160px;
+        height: 4px;
+    }
+
+    .collections{
+        gap: 20px;
+        margin-top: 30px;
+    }
+}
+@media(max-width: 1024px) {
+    .newcollections{
+        height: 60vh;
+        
+    }
+
+    .newcollections h1 {
+        font-size: 30px;
+    }
+
+    .newcollections hr {
+        width: 120px;
+        height: 3px;
+    }
+
+    .collections{
+        gap: 15px;
+        margin-top: 20px;
+    }
+}
+@media(max-width: 800px) {
+    .newcollections{
+        height: 50vh;
+        gap: 6px;
+    }
+
+    .newcollections h1 {
+        font-size: 20px;
+    }
+
+    .newcollections hr {
+        width: 100px;
+    }
+
+    .collections{
+        gap: 5px;
+            
+    }
+}
+
+@media(max-width: 500px){
+    .newcollections{
+        height: 100vh;
+    }
+
+    .collections{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
 }
