--- a/frontend/src/Components/Offers/Offers.css
+++ b/frontend/src/Components/Offers/Offers.css
@@ -4,7 +4,6 @@
     display: flex;
     margin: auto;
     padding: 0px 140px;
-    margin-bottom: 150px;
     background: linear-gradient(180deg, #fde1ff 0%, #e1ffea22 60%);
 }
 
@@ -41,7 +40,142 @@
 .offers-right{
     flex: 1;
     display: flex;
-    align-items: center;
+    align-items: end;
     justify-content: center;
     padding-top: 50px;
 }
+
+.offers-right img {
+    width: 475px;
+}
+
+@media(max-width: 1280px){
+    .offers{
+        padding: 0px 80px;
+        height: 42vh;
+        margin-bottom: 120px;
+    }
+
+    .offers-left{
+        justify-content: end;
+        margin-bottom: 100px;
+
+    }
+
+    .offers-right{
+        padding-top: 0px;
+    }
+
+    .offers-left h1 {
+        font-size: 42px;
+    }
+
+    .offers-left p {
+        font-size: 20px;
+    }
+
+    .offers-right img {
+        width: 350px;
+    }
+
+    .offers-left button{
+        width: 220px;
+        height: 50px;
+        font-size: 18px;
+    }
+}
+@media(max-width: 1024px){
+    .offers{
+        padding: 0px 60px;
+        height: 35vh;
+        margin-bottom: 80px;
+    }
+
+    .offers-left{
+        justify-content: end;
+        margin-bottom: 100px;
+
+    }
+
+    .offers-left h1 {
+        font-size: 30px;
+    }
+
+    .offers-left p {
+        font-size: 16px;
+    }
+
+    .offers-right img {
+        width: 290px;
+    }
+
+    .offers-left button{
+        width: 160px;
+        height: 40px;
+        font-size: 16px;
+    }
+}
+@media(max-width: 800px){
+    .offers{
+        height: 30vh;
+        padding: 0px 40px;
+        margin-bottom: 60px;
+    }
+
+    .offers-left{
+        justify-content: end;
+        margin-bottom: 100px;
+
+    }
+
+    .offers-left h1 {
+        font-size: 22px;
+    }
+
+    .offers-left p {
+        font-size: 13px;
+    }
+
+    .offers-right img {
+        width: 240px;
+    }
+
+    .offers-left button{
+        width: 140px;
+        height: 30px;
+        font-size: 12px;
+    }
+}
+@media(max-width: 500px){
+    .offers{
+        padding: 0px 20px;
+        height: 22vh;
+        margin-bottom: 50px;
+    }
+
+    .offers-left{
+        justify-content: end;
+        margin-bottom: 60px;
+
+    }
+
+    .offers-left h1 {
+        font-size: 16px;
+    }
+
+    .offers-left p {
+        font-size: 10px;
+    }
+
+    .offers-right img {
+        width: 180px;
+    }
+
+    .offers-left button{
+        width: 120px;
+        height: 25px;
+        font-size: 10px;
+        margin-top: 12px;
+    }
+}
+
